# IEEE-CIS-Fraud-Detection

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-gh-pages.yml
data/: README.md
src/fraud_analysis/: __init__.py  __main__.py  cli.py  eda.py  export_dashboard.py  ingest.py  model.py  paths.py  processed.py  schema.py  validate.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/data/: eda.json  model.json  overview.json
web/src/: App.tsx  styles.css  types.ts
web/src/charts/: EChart.tsx  options.ts
web/src/components/: DataTable.tsx  MetricCard.tsx
web/src/lib/: data.ts  fallbackData.ts  format.ts
