[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ieee-fraud-detection-dashboard"
version = "0.1.0"
description = "Modular analysis pipeline and static interactive dashboard for IEEE-CIS fraud detection data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "polars>=1.0",
  "pyarrow>=16.0",
  "scikit-learn>=1.5"
]

[project.optional-dependencies]
model = [
  "lightgbm>=4.3"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[project.scripts]
fraud-analysis = "fraud_analysis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_analysis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
